<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/linear_layout_background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/restart_image_button"
        android:src="@drawable/baseline_autorenew_white_18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/creepster"
        android:text="@string/trivia_textView"
        android:textColor="@color/white"
        android:textSize="34sp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/highest_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="Highest score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/current_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/caesar_dressing"
            android:text="Current Score"
            android:textSize="20sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/questions_counter_text_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/creepster" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="226dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/questions_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calligraffitti"
            android:text="Hey there , something is coming"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:layout_marginEnd="20dp"
            android:background="@color/button"
            style="?android:attr/borderlessButtonStyle"/>


        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:background="@color/button"
            style="?android:attr/borderlessButtonStyle"/>



    </LinearLayout>
    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/next_image_button"
        android:src="@android:drawable/ic_media_next"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>